# verilog-unittest-sample

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yaml
src/: alu.sv
test/: test_alu.cpp  test_alu.hpp
